--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ button:hover {
     padding: 20px;
     border-radius: 5px;
     gap: 20px;
+    transition: left 2s ease-in-out;
 
 }
 
@@ -137,8 +138,61 @@ textarea {
 }
 
 .mascara-formulario {
+    visibility: hidden;
     position: fixed;
     top: 0;
     width: 100vw;
     height: 100vh;
+    background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
+    transition: visibility 1s ease-in-out; 
+}
+
+
+@media(max-width: 1100px) {
+
+    p {
+        display: none;
+    }
+
+    .caixa-mother {
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .caixa-principal{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .header{
+        margin: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header img {
+        display: none;
+    }
+
+    .header a{
+        font-size: 20px;
+    }
+
+
+
+
+
+
+    .img-mario-e-luigi{
+        width: 80vw;
+        height: auto;
+    }
+    
+
+
+
+
+
 }
